<resources>
    <string name="app_name">PACABS-DRIVER</string>
    <string name="map_key">AIzaSyBGSjK7aKKqIMHYXUvx3RBw1l23Zt8Oybk</string>
    <string name="pacabs_n_driver">PA CABs \n Driver</string>
    <string name="skip">Skip</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lurem_ipsum">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</string>
    <string name="tracking_realtime">Tracking Realtime</string>
    <string name="earn_money">Earn Money</string>
    <string name="enable_loc">Enable Location</string>
    <string name="get_started">Get Started</string>
    <string name="enable_your_location">Enable Your Location</string>
    <string name="choose_loc">Choose your location to start find the requests around you</string>
    <string name="use_my_location">Use My Location</string>
    <string name="continoue">Continoue</string>
    <string name="enter_otp_code_sent_to_your_mobile_number">Enter OTP sent to your number</string>
    <string name="verification">OTP-Verification</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="otp">OTP</string>
    <string name="driver">Driver</string>
    <string name="single_cab_owner">Single Cab Owner</string>
    <string name="signup_with_n_phone_number"><b>Signup</b> with \nphone number</string>
    <string name="email_format">abc@xyz.com</string>
    <string name="number_only_digits">0123456789</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="login_with_nmobile_number"><b>Login</b> with \nmobile number</string>
    <string name="you_are_offline">You are offline !</string>
    <string name="go_online_to_start_accepting_jobs">Go online to start accepting jobs</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="home">Home</string>
    <string name="bookings">Bookings</string>
    <string name="wallet">Wallet</string>
    <string name="profile">Profile</string>
    <string name="hundred_">₹ 100</string>
    <string name="hundred_f">₹ 500</string>
    <string name="hundred_1k">₹ 1000</string>
    <string name="hundred_15k">₹ 1500</string>
    <string name="hundred_2k">₹ 2000</string>
    <string name="top_up">Top Up</string>
    <string name="general_information">General Information</string>
    <string name="notifications">Notifications</string>
    <string name="manageVehicles">Manage Cabs</string>
    <string name="dummu_loc">Sai nilayam, East Parsanth Nager, Hydrabad, Telangana 5000636, India</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="my_rides">My Rides</string>
    <string name="support">Supports</string>
    <string name="my_earminhs">My Earnings</string>
    <string name="completed">Completed</string>
    <string name="upcoming">UpComing</string>
    <string name="cancelled">Cancelled</string>
    <string name="my_wallet">My Wallet</string>
    <string name="cash_balance">Cash Balance</string>
    <string name="dummy_date">02/8/2021</string>
    <string name="estimation"><u>Estimation</u></string>
    <string name="fare_estimation">Total estimation fare price including taxes</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="plan_type">Plan Type</string>
    <string name="local">Local</string>
    <string name="hours">Hours</string>
    <string name="parking_toll_charges">Price may vary base on the trip duration, distance \nThe Parking and toll charges paid by customer</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="est">EST</string>
    <string name="distance">Distance</string>
    <string name="fare">Fare</string>
    <string name="end_ride">End Ride</string>
    <string name="detaiks">Bill Details</string>
    <string name="base_fare">Base Fare</string>
    <string name="extra_km">Extra Km</string>
    <string name="extra_hrs">Extra Hrs</string>
    <string name="commision">Commission</string>
    <string name="coupon_discount">Coupon/Discount</string>
    <string name="total_bill">Total Bill</string>
    <string name="payment">Payment</string>
    <string name="manage_cabs">Manage Cabs</string>
    <string name="cash">Cash</string>
    <array name="onOffArray">
        <item>ON</item>
        <item>OFF</item>
    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="my_bookings">My Bookings</string>
    <string name="trip_statistics">Trip Statistics</string>
    <string name="user_feedback">User Feedback</string>
    <string name="tarrif_plan"><u>Tariff Plan</u></string>
    <string name="contact_support">Contact Support</string>
    <string name="logout">Logout</string>
    <string name="ignore">Ignore</string>
    <string name="verify_now">Verify Now</string>
    <string name="bank_details">Bank Details</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_second_name">Enter Second Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_vehicle_number">Enter Vehicle Number</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="enter_bank_name">Enter bank name</string>
    <string name="name_as_per_bank">Name as per bank</string>
    <string name="enter_ifsc_code">Enter IFSC code</string>
    <string name="select_city">Select City</string>
    <string name="select_work_type">Select Work Type</string>
    <string name="select_vehicle">Select Vehicle</string>
    <string name="my_earnings">My Earnings</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="search">Search</string>
    <string name="reset">Reset</string>
    <string name="start_ride">Start Ride</string>

    <string name="indian_currency"> ₹</string>
     <string name="pay_now">Pay Now</string>
    <string name="no_record">No Record Found</string>


</resources>