<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".fragments.splashIntroScreensFrags.IntroScreenFrag1">

    <View
        android:id="@+id/emoDiv"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emoDiv">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/introImg"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_key" />

            <TextView
                android:id="@+id/introTitleTv"
                style="@style/headlingStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/earn_money" />

            <TextView
                android:id="@+id/introDescTv"
                style="@style/titleStyle"
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_height="wrap_content"
                android:text="@string/lurem_ipsum"
                android:textAlignment="center" />

            <Button
                android:id="@+id/gotoEnableLocBtn"
                style="@style/buttonStyle"
                android:layout_width="@dimen/_100sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/button_selector_yellow"
                android:text="@string/get_started" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>