<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/_20sdp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <TextView
                android:id="@+id/titleSignUp"
                style="@style/titleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="start"
                android:text="@string/signup"
                android:textAlignment="textStart"
                android:textColor="@color/colorBlack"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/fisrtNameEd"
                style="@style/myEditText"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/edittext_white_border_bg"
                android:hint="@string/enter_first_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:maxLength="20"
                app:layout_constraintTop_toBottomOf="@+id/titleSignUp" />

            <EditText
                android:id="@+id/secondNameEd"
                style="@style/myEditText"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/enter_second_name"
                android:imeOptions="actionDone"
                android:inputType="textPersonName"
                android:maxLength="20"
                app:layout_constraintTop_toBottomOf="@+id/fisrtNameEd" />

            <EditText
                android:id="@+id/mobileNumberEd"
                style="@style/myEditText"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:digits="@string/number_only_digits"
                android:hint="@string/enter_mobile_number"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:maxLength="20"
                app:layout_constraintTop_toBottomOf="@+id/secondNameEd" />

            <EditText
                android:id="@+id/vehicleNumberEd"
                style="@style/myEditText"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/enter_vehicle_number"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLength="20"
                app:layout_constraintTop_toBottomOf="@+id/mobileNumberEd" />

            <EditText
                android:id="@+id/passwordEd"
                style="@style/myEditText"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/enter_password"
                android:imeOptions="actionDone"
                android:inputType="textVisiblePassword"
                android:maxLength="20"
                app:layout_constraintTop_toBottomOf="@+id/vehicleNumberEd" />

            <EditText
                android:id="@+id/confirmPasswordEd"
                style="@style/myEditText"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/enter_confirm_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="20"
                app:layout_constraintTop_toBottomOf="@+id/passwordEd" />

            <TextView
                android:id="@+id/citySpinnerTitle"
                style="@style/titleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="start"
                android:text="@string/select_city"
                android:textAlignment="textStart"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/confirmPasswordEd" />

            <LinearLayout
                android:background="@drawable/edittext_white_border_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/citySpinner"
                    android:spinnerMode="dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:background="@drawable/spinner_bg"
                    android:paddingStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    app:layout_constraintTop_toBottomOf="@+id/citySpinnerTitle" />
            </LinearLayout>

            <TextView
                android:id="@+id/vehicleSpinnerTitle"
                style="@style/titleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="start"
                android:text="@string/select_vehicle"
                android:textAlignment="textStart"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/citySpinner" />

            <LinearLayout
                android:background="@drawable/edittext_white_border_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/vehicleSpinner"
                    android:spinnerMode="dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:background="@drawable/spinner_bg"
                    android:paddingStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    app:layout_constraintTop_toBottomOf="@+id/vehicleSpinnerTitle" />
            </LinearLayout>

            <TextView
                style="@style/titleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="start"
                android:text="@string/select_work_type"
                android:textAlignment="textStart"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/citySpinner" />

            <LinearLayout
                android:background="@drawable/edittext_white_border_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/workTypeSpinner"
                    android:spinnerMode="dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:background="@drawable/spinner_bg"
                    android:paddingStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    />
            </LinearLayout>

            <TextView
                style="@style/titleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="start"
                android:text="Select Service Type"
                android:textAlignment="textStart"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/citySpinner" />

            <LinearLayout
                android:background="@drawable/edittext_white_border_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/serviceTypeSpinner"
                    android:spinnerMode="dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:background="@drawable/spinner_bg"
                    android:paddingStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    />
            </LinearLayout>


            <TextView
                android:id="@+id/titleBankDetails"
                style="@style/titleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="start"
                android:text="@string/bank_details"
                android:textAlignment="textStart"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/serviceTypeSpinner" />

            <EditText
                android:id="@+id/accountNumberEd"
                style="@style/myEditText"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/edittext_white_border_bg"
                android:hint="Enter account number"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLength="20"
                app:layout_constraintTop_toBottomOf="@+id/titleBankDetails" />

            <EditText
                android:id="@+id/bankNameEd"
                style="@style/myEditText"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/edittext_white_border_bg"
                android:hint="@string/enter_bank_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:maxLength="30"
                app:layout_constraintTop_toBottomOf="@+id/accountNumberEd" />

            <EditText
                android:id="@+id/accountNameasBankEd"
                style="@style/myEditText"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/edittext_white_border_bg"
                android:hint="@string/name_as_per_bank"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:maxLength="30"
                app:layout_constraintTop_toBottomOf="@+id/bankNameEd" />

            <EditText
                android:id="@+id/ifscCodeEd"
                style="@style/myEditText"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/edittext_white_border_bg"
                android:hint="@string/enter_ifsc_code"
                android:digits="@string/number_only_digits"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="10"
                app:layout_constraintTop_toBottomOf="@+id/accountNameasBankEd" />


            <Button
                android:id="@+id/signupBtn"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_25sdp"
                android:background="@drawable/button_selector_black"
                android:text="SIGNUP"
                android:textColor="@color/colorWhite"
                app:layout_constraintTop_toBottomOf="@+id/ifscCodeEd" />
        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>