<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingStart="@dimen/_10sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingBottom="@dimen/_50sdp"
        android:scrollbars="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/titleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_with_nmobile_number"
                android:textColor="@color/colorBlack"
                android:textSize="22sp" />


            <EditText
                android:id="@+id/numberEd"
                style="@style/myEditText"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_20sdp"
                android:digits="@string/number_only_digits"
                android:hint="@string/enter_mobile_number"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:maxLength="20" />

            <Button
                android:id="@+id/loginBtn"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/button_selector_black"
                android:text="Login"
                android:textColor="@color/colorWhite" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>